# concorde-policy-mapper-web

./: .gitignore  Containerfile  Containerfile.openshift  Makefile  README.md  pyproject.toml
openshift/: deployment.yaml  route.yaml  service.yaml
scripts/: oc-build.sh
src/concorde_policy_mapper_web/: app.py  compare.py  runner.py  scanner.py
src/concorde_policy_mapper_web/templates/: base.html  compare.html  new_run.html  risk_detail.html  run_detail.html  runs.html
tests/: conftest.py  test_app.py  test_compare.py  test_runner.py  test_scanner.py
