[project]
name = "concorde-policy-mapper-web"
version = "0.1.0"
description = "Interactive web explorer for concorde-policy-mapper extraction results"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "python-multipart>=0.0.18",
]

[project.scripts]
concorde-policy-mapper-web = "concorde_policy_mapper_web.app:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/concorde_policy_mapper_web"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
]
